[package]
name = "lausch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
byteorder = "1.5.0"
cached-path = "0.6.1"
clap = { version = "4.4.11", features = ["derive"] }
cpal = "0.15.2"
crossbeam-channel = "0.5.10"
dirs = "5.0.1"
inputbot = "0.6"
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
ort = "1.16.3"
regex = "1.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
whisper-rs = "0.10.0"
