[package]
name = "lausch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
byteorder = "1.5.0"
cached-path = "0.6.1"
clap = { version = "4.4.12", features = ["derive"] }
cpal = "0.15.2"
crossbeam-channel = "0.5.10"
dirs = "5.0.1"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", rev = "71cd5970a78c190059ef85165c0f860a742e3d9e" }
itertools = "0.12.0"
lazy-regex = "3.1.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
ort = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-alpha.4" }
regex = "1.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
whisper-rs = "0.10.0"
